update dependency version